@@ -2397,7 +2397,6 @@ sub handle_texinfo
     $xform .= &transform ('TEXINFODIR' => $texinfodir);
 
     $output_rules .= &file_contents_with_transform ($xform, 'texinfos');
-    push (@phony, 'install-info-am', 'uninstall-info');
     push (@dist_targets, 'dist-info');
 
     # How to clean.  The funny name is due to --cygnus influence; in
@@ -2511,7 +2510,6 @@ sub handle_man_pages
 	$output_rules .= &file_contents_with_transform ('s/\@SECTION\@/'
 							. $sect . '/g;',
 							'mans');
-	push (@phony, 'install-man' . $sect, 'uninstall-man' . $sect);
 	push (@namelist, 'install-man' . $sect);
     }
 
@@ -2551,7 +2549,6 @@ sub handle_data
 # Handle TAGS.
 sub handle_tags
 {
-    push (@phony, 'tags');
     local (@tag_deps) = ();
     if (&variable_defined ('SUBDIRS'))
     {
@@ -2620,7 +2617,6 @@ sub handle_multilib
 
     $output_rules .= &file_contents ('multilib');
     &push_phony_cleaners ('multi');
-    push (@phony, 'all-multi', 'install-multi');
 }
 
 # Worker for handle_dist.
@@ -3136,18 +3132,6 @@ sub handle_subdirs
 		       : '')
 		      . '/;');
     $output_rules .= &file_contents_with_transform ($xform, 'subdirs');
-
-    # Push a bunch of phony targets.
-    local ($phonies);
-    foreach $phonies ('', '-data', '-exec', 'dirs')
-    {
-	push (@phony, 'install' . $phonies . '-recursive');
-	push (@phony, 'uninstall' . $phonies . '-recursive');
-    }
-    foreach $phonies ('all', 'check', 'installcheck', 'info', 'dvi')
-    {
-	push (@phony, $phonies . '-recursive');
-    }
     &push_phony_cleaners ('recursive');
 
     $recursive_install = 1;
