@@ -61,3 +61,5 @@ uninstall-man@SECTION@:
 	  echo " rm -f $(DESTDIR)$(man@SECTION@dir)/$$inst"; \
 	  rm -f $(DESTDIR)$(man@SECTION@dir)/$$inst; \
 	done
+
+.PHONY: install-man@SECTION@ uninstall-man@SECTION@
