@@ -207,3 +207,5 @@ CYGNUS	  if test -f $$base; then d=.; else d=$(srcdir); fi; \
 	    || cp -p $$d/$$file $(distdir)/$$file; \
 	  done; \
 	done
+
+.PHONY: install-info-am uninstall-info
