@@ -1,5 +1,12 @@
 2001-01-29  Akim Demaille  <akim@epita.fr>
 
+	* texinfos.am, tags.am, subdirs.am, multilib.am, mans.am: Add a
+	.PHONY target.
+	* automake.in (handle_texinfo, handle_man_pages, handle_multilib)
+	(handle_etags, handle_subdirs): Don't push into @phony.
+
+2001-01-29  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (scan_one_autoconf_file): Correctly recognize
 	configure.ac.
 
